<resources>
    <string name="select_coutroy">Country/Region</string>
    <string name="app_name">Philips EasyKey Plus</string>
    <string name="app_name_notificatoin_title">%1$s Running</string>
    <string name="app_name_notificatoin_content">%1$s The service has started, and you will be prompted to the push notifications.</string>
    <string name="philips">Philips</string>
    <string name="china">Mainland, China</string>
    <string name="input_telephone_or_rmail">Phone number/Email</string>
    <string name="philips_hint_plz_input_password">Password</string>
    <string name="forget_password_symbol">Forgot password?</string>
    <string name="philips_login">Log in</string>
    <string name="have_you_account_symbol">Do not have an account ?</string>
    <string name="philips_register_now">Sign up</string>
    <string name="philips_register">Sign up</string>
    <string name="philips_get_verification">Get code</string>
    <string name="philips_hint_input_verification">verification code</string>
    <string name="philips_verification_code">Verification code</string>
    <string name="input_verification_code">Enter the verification code</string>
    <string name="register_default_agree">注册默认同意</string>
    <string name="user_protocol">用户协议</string>
    <string name="philips_agree">Agree</string>
    <string name="philips_no_agree">Decline</string>
    <string name="philips_forget_password">Forgot password</string>
    <string name="philips_registered_account">Register an account</string>
    <string name="philips_sms_login">Text login</string>
    <string name="philips_wechat_bind">WeChat account binding</string>
    <string name="have_add_lock">Door lock added</string>
    <string name="have_add_lock_text">快来设置智能开关吧!</string>
    <string name="philips_complete">Done</string>
    <string name="right_now_set">立即设置</string>
    <string name="sure_to_perform">确定执行</string>
    <string name="philips_search">Search</string>
    <string name="input_lock_product">Enter device model</string>
    <string name="input_clothes_product">请输入您的晾衣机型号</string>
    <string name="look_for_QRCode">Get the QR code on the rear escutcheon</string>
    <string name="not_input_special_symbol">Special characters are not allowed</string>
    <string name="phone_not_right">Incorrect phone number</string>
    <string name="hint">Tips</string>
    <string name="philips_password_error">Incorrect password</string>
    <string name="affirm">Confirm</string>
    <string name="philips_noNet">Network not available, please connect to the Internet</string>
    <string name="more_then_ten_member">The shared members you have added have exceeded 10,\nplease delete the existing members and add new ones</string>
    <string name="dialog_confirm">确认</string>
    <string name="safe_mode_dialog">请去新增开锁方式，启动安全模式</string>
    <string name="philips_cancel">Cancel</string>
    <string name="query">Confirm</string>
    <string name="get_verification_content">Retry(%1$s)</string>
    <string name="verification_verify_error">Enter a 6-digit verification code</string>
    <string name="philips_password_judgment">Must be between 8 to 15 characters, which contains both letters and numbers</string>
    <string name="philips_please_enter_the_correct_password">Enter the correct password</string>
    <string name="agree_user_protocol">请同意用户协议</string>
    <string name="philips_input_valid_telephone_or_email">Please enter a valid mobile phone number or email address</string>
    <string name="philips_input_valid_telephone">请输入有效的手机号</string>
    <string name="philips_this_account_is_not_registered">The account does not exist</string>
    <string name="philips_account_message_not_empty">Account information cannot be empty</string>
    <string name="home_page">Home</string>
    <string name="device">Device</string>
    <string name="message">Message</string>
    <string name="mine">Me</string>
    <string name="guard_your_home">守护您的家</string>
    <string name="click_add_device">Add a device</string>
    <string name="my_message">我的消息</string>
    <string name="production_activation">产品激活</string>
    <string name="security_setting">Security Setting</string>
    <string name="user_feedback">用户反馈</string>
    <string name="chang_jian_question">FAQ</string>
    <string name="my_setting">我的设置</string>
    <string name="about_us">About us</string>
    <string name="strong_strong_guardian">壮壮家的守护者</string>
    <string name="no_message">No message</string>
    <string name="official">官方</string>
    <string name="delete">Delete</string>
    <string name="message_detail">消息详情</string>
    <string name="nickname_modify_success">昵称修改成功</string>
    <string name="server_back_exception">Error message returned by server</string>
    <string name="tiem_out">Timeout</string>
    <string name="connect_exception">Connection failed</string>
    <string name="unable_identify_host">Host server cannot be resolved</string>
    <string name="http_exception">http exception</string>
    <string name="exception">Exception processing message</string>
    <string name="phone_number_con_not_empty">The phone number cannot be empty</string>
    <string name="find_newAPP">New version available, update now?</string>
    <string name="token_out_date">Login expired</string>
    <string name="register_success">注册成功</string>
    <string name="philips_pwd_resetting_success">密码重置成功</string>
    <string name="my_device">我的设备</string>
    <string name="you_no_device">您还没有设备哦</string>
    <string name="lockNickName">Philips EasyKey Plus Smart Lock</string>
    <string name="device_power">Battery level</string>
    <string name="add_device">Add a device</string>
    <string name="device_zigbee">ZigBee</string>
    <string name="gateway_light_setting">指示灯处于其它状态？</string>
    <string name="add_gateway">添加网关</string>
    <string name="add_next">Next</string>
    <string name="philips_clothes_hanger_add_next">Reconnect</string>
    <string name="philips_clothes_hanger_add_reconnect">Cancel</string>
    <string name="clothes_hanger_add_success">配网成功，您可以体验产品了~</string>
    <string name="gateway_light_confirm">网线连接路由器LAN和网关WAN,\n接通电源,确认指示灯常亮</string>
    <string name="confirm_gateway_light_already">确认配网指示灯常亮</string>
    <string name="reset_key_two">（如指示灯处于其他状态，按复位键）</string>
    <string name="confirm_indicator_light">确认指示灯变亮</string>
    <string name="go_bind">去绑定</string>
    <string name="wifi_is_connecting">正在连接Philips EasyKey Plus网关Wi-Fi中...</string>
    <string name="add_lock">Add a door lock</string>
    <string name="choose_to_add_wifi">选择配网</string>
    <string name="searching_bluetooth">正在搜索附近设备...</string>
    <string name="research">Restart searching</string>
    <string name="help">Help</string>
    <string name="help_title">您无法发现您的蓝牙设备，请按照以下步骤对设备进行检查：</string>
    <string name="help_gateway_bottom">If you have completed the above steps and still cannot add the device, you can go to "Me-Contact Us" .</string>
    <string name="help_bottom">如果您已经完成以上操作，仍然无法成功添加设备，可以在“我的-用户反馈”向我们的工作人员进行反馈。</string>
    <string name="help_cateye_bottom">如果您已经完成以上操作，仍然无法成功添加设备，可以在“我的-用户反馈”向我们的工作人员进行反馈。</string>
    <string name="help_one">请保证您的设备已经接通电源，或电池电量充足。</string>
    <string name="help_two">请打开您的手机蓝牙。（由于系统原因，安卓手机需要同时开启定位权限）</string>
    <string name="help_three">保持待添加的设备与手机的距离不超过5米，从而保证设备间的通信。</string>
    <string name="help_four">您需要确保您的设备处于待添加的状态下具体方法如下：</string>
    <string name="help_four_one">对于没有任何按键的设备，您可以尝试以 1 秒为间隙，反复对设备进行上电操作。</string>
    <string name="bluetooth_first_text">确保门锁已安装好，并装上电池</string>
    <string name="bluetooth_first_text1">确保%1$s锁已安装好，%2$s并装上电池%3$s</string>
    <string name="log_out">Logout</string>
    <string name="wandering_alarm">Loitering alert</string>
    <string name="wandering_pir_sensitivity">Detection distance</string>
    <string name="wandering_judge_time">Loitering duration</string>
    <string name="wandering_pir_sensitivity_text">High sensitivity will increase the frequent detection distance, resulting in power consumption</string>
    <string name="wandering_judge_time_text">The judgment time should not be too short to prevent false alarms</string>
    <string name="user_manage">用户管理</string>
    <string name="skip">Skip</string>
    <string name="philips_remote_control">实时防御</string>
    <string name="philips_guide_page_three_hint">触发报警功能，自动抓拍视频报警</string>
    <string name="philips_immediate_experience">Get started</string>
    <string name="user_help">Help</string>
    <string name="wifi_lock_help_notice1">我是新手，怎么配置Philips EasyKey PlusWi-Fi 门锁?</string>
    <string name="wifi_video_lock_waiting">Please wait</string>
    <string name="activity_wifi_video_wamdering_open">After turning the video on, the camera will detect people loitering outside the door, which is power-consuming.</string>
    <string name="activity_wifi_video_wamdering_low">1 m</string>
    <string name="publish">发布</string>
    <string name="disconnect">断开</string>
    <string name="fragment_mytest_connect">连接</string>
    <string name="activity_wifi_lock_help_1">配置前确认:</string>
    <string name="activity_wifi_lock_help_2">① 确认门锁已安装 \n② 建议在门锁后面板装入用本产品配置的碱性电池或其他符合规格的干电 池4节或8节，确保门锁正常使用Wi-Fi联网功能 \n③ 当门锁出现低电量报警时，请及时更换掉电池，确保电池正负极安装正确 \n④ 确认门锁后面板Wi-Fi 模块已插紧，不松动 \n⑤ 确保手机蓝牙已打开，家里Wi-Fi网络(2.4G网络) 可正常使用，并且手机已经连接该网络</string>
    <string name="activity_wifi_lock_help_3">进行门锁的激活操作:</string>
    <string name="activity_wifi_lock_help_4">① 微信搜索【Philips EasyKey Plus智能锁】公众号并关注\n② 进入公众号－【售后服务】，点击【产品激活】\n③ 扫描电池盖产品序列号，获取激活码\n④ 唤醒门锁，输入激活码，按“＃”确认</string>
    <string name="activity_wifi_lock_help_5">First time pairing with the door lock:</string>
    <string name="activity_wifi_lock_help_6">① 在[添加设备页面]， 点击右上角图标，扫描对应电池盒上的配网二维码，进行配网\n② 请确保手机已打开蓝牙,并优先连接上2.4G Wi-Fi \n③ 用手触碰按键区，唤醒门锁 ，确保门锁数字键盘灯亮，手机App连上门锁热点，如手机连接不上门锁热点，请选择其他配网方式进行配网\n④ 门锁验证-输入配置门锁当前管理密码进行验证，验证通过，跳转下一步\n⑤ 输入Wi-Fi 密码， (确保此处选择的Wi-Fi与手机已连接的Wi-Fi是同一个2.4G Wi-Fi网络)，点击[下一步]\n⑥ 在 [连接设备]，等待设备连接成功</string>
    <string name="activity_wifi_lock_help_7">Can not the door lock to be paired with?</string>
    <string name="activity_wifi_lock_help_8"><![CDATA[① 用手触碰按键区，唤醒门锁 ，确保门锁数字键盘灯亮 \n② 确保手机蓝牙已打开 \n③ 门锁后面板Wi-Fi 模块已插紧，不松动\n④ 为门锁配网过程中，针对苹果手机，App会根据系统情况弹窗提示您打开“Wi-Fi开关”， “系统位置服务”和“应用定位权限”，请务必打开以保证完成配网过程\n⑤ 对于安卓手机，如果没有任何弹窗提示，请手动检查并打开:“系统位置服务”在:设置->高级(更多)设置->系统安全->位置信息,“应用定位权限”在系统的应用权限管理界面]]></string>
    <string name="activity_wifi_lock_help_9">选择其他配网方式</string>
    <string name="activity_wifi_lock_help_10">触摸门锁前面数字面板，唤醒门锁，门锁进入配网模式:\n① 按键区先输入“*”两次\n② 输入门锁管理密码：“******* ”\n③ 按“#”确认，语音播报“已进入管理模式”\n④ 根据语音提示：按[4] 选择 “扩展模式”，再按[1] 选择 “加入网络”\n⑤ 语音播报：“配网中，请稍后”</string>
    <string name="activity_wifi_lock_help_11">门锁都支持哪些Wi-Fi ?</string>
    <string name="activity_wifi_lock_help_12">① 门锁目前支持2.4G Wi-Fi， 暂不支持5G Wi-Fi\n② 如果您的路由器同时打开了2.4G和5G的Wi-Fi，建议两者使用不同的Wi-Fi名称，以免影响门锁联网效果\n③ 门锁暂不支持同一Wi-Fi名称漫游的公共Wi-Fi环境，比如很多公司、酒店等公共场合的Wi-Fi环境\n④ 如果需要在上述公共Wi-Fi环境下使用，可以安装一台拥有独立Wi-Fi名称的路由器，并将该路由器接入公共Wi-Fi 网络\n⑤ 如使用连接的家庭Wi-Fi无密码，可在App端输入密码12345678，进行连网</string>
    <string name="activity_wifi_lock_help_13">Check router settings</string>
    <string name="activity_wifi_lock_help_14">① Confirm that the Wi-Fi name and password set by the router do not use special characters \n ② Confirm that the security authentication type of the router is WPA-PSK or WPA2-PSK, if not, please modify it to WPA-PSK or WPA2-PSK \n ③ Confirm whether the router’s Wi-Fi network is set with whitelist, blacklist, MAC address filtering \n ④ If your router has been working for a long time, it is recommended to restart the router and try again</string>
    <string name="activity_wifi_lock_help_15">The above steps are ok, but the network connection still fails</string>
    <string name="activity_wifi_lock_help_16">① Try to turn off the Wi-Fi of the mobile phone and turn it on and try again \n ② Reboot the mobile phone and try again</string>
    <string name="second_15">15 Second</string>
    <string name="philips_device_wandering_alarm_restore_default">Restore defaults</string>
</resources>