<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F2F2"
    android:orientation="vertical"
    tools:context="com.philips.easykey.lock.activity.device.wifilock.add.WifiLockHelpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:background="#F8F8F8">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="@dimen/dp_16"
            android:paddingTop="@dimen/dp_5"
            android:paddingRight="@dimen/dp_16"
            android:paddingBottom="@dimen/dp_5"
            android:src="@mipmap/back_gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/user_help"
            android:textColor="#000000"
            android:textSize="@dimen/sp_17"
            android:textStyle="bold" />

    </RelativeLayout>

    <ScrollView
        android:layout_marginBottom="@dimen/dp_14"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_13"
            android:orientation="vertical">


            <TextView
                android:paddingHorizontal="@dimen/dp_14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_14"
                android:background="@drawable/background_add_white"
                android:paddingVertical="@dimen/dp_18"
                android:text="@string/wifi_lock_help_notice1"
                android:textColor="#333333"
                android:textSize="13sp" />

            <LinearLayout
                android:paddingBottom="@dimen/dp_12"
                android:paddingHorizontal="@dimen/dp_14"
                android:layout_marginHorizontal="@dimen/dp_14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                android:background="@drawable/background_add_white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="@dimen/dp_10"
                    android:text="@string/activity_wifi_lock_help_1"
                    android:textColor="#333333"
                    android:textSize="13sp" />

                <TextView
                    android:lineSpacingExtra="5dp"
                    android:textSize="10sp"
                    android:textColor="#666666"
                    android:text="@string/activity_wifi_lock_help_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>



            <LinearLayout
                android:paddingBottom="@dimen/dp_12"
                android:paddingHorizontal="@dimen/dp_14"
                android:layout_marginHorizontal="@dimen/dp_14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                android:background="@drawable/background_add_white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="@dimen/dp_10"
                    android:text="@string/activity_wifi_lock_help_3"
                    android:textColor="#333333"
                    android:textSize="13sp" />

                <TextView
                    android:lineSpacingExtra="5dp"
                    android:textSize="10sp"
                    android:textColor="#666666"
                    android:text="@string/activity_wifi_lock_help_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>



            <LinearLayout
                android:paddingBottom="@dimen/dp_12"
                android:paddingHorizontal="@dimen/dp_14"
                android:layout_marginHorizontal="@dimen/dp_14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                android:background="@drawable/background_add_white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="@dimen/dp_10"
                    android:text="@string/activity_wifi_lock_help_5"
                    android:textColor="#333333"
                    android:textSize="13sp" />

                <TextView
                    android:lineSpacingExtra="5dp"
                    android:textSize="10sp"
                    android:textColor="#666666"
                    android:text="@string/activity_wifi_lock_help_6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>


            <LinearLayout
                android:paddingBottom="@dimen/dp_12"
                android:paddingHorizontal="@dimen/dp_14"
                android:layout_marginHorizontal="@dimen/dp_14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                android:background="@drawable/background_add_white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="@dimen/dp_10"
                    android:text="@string/activity_wifi_lock_help_7"
                    android:textColor="#333333"
                    android:textSize="13sp" />

                <TextView
                    android:lineSpacingExtra="5dp"
                    android:textSize="10sp"
                    android:textColor="#666666"
                    android:text="@string/activity_wifi_lock_help_8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>


            <LinearLayout
                android:paddingBottom="@dimen/dp_12"
                android:paddingHorizontal="@dimen/dp_14"
                android:layout_marginHorizontal="@dimen/dp_14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                android:background="@drawable/background_add_white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="@dimen/dp_10"
                    android:text="@string/activity_wifi_lock_help_9"
                    android:textColor="#333333"
                    android:textSize="13sp" />

                <TextView
                    android:lineSpacingExtra="5dp"
                    android:textSize="10sp"
                    android:textColor="#666666"
                    android:text="@string/activity_wifi_lock_help_10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>


            <LinearLayout
                android:paddingBottom="@dimen/dp_12"
                android:paddingHorizontal="@dimen/dp_14"
                android:layout_marginHorizontal="@dimen/dp_14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                android:background="@drawable/background_add_white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="@dimen/dp_10"
                    android:text="@string/activity_wifi_lock_help_11"
                    android:textColor="#333333"
                    android:textSize="13sp" />

                <TextView
                    android:lineSpacingExtra="5dp"
                    android:textSize="10sp"
                    android:textColor="#666666"
                    android:text="@string/activity_wifi_lock_help_12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:paddingBottom="@dimen/dp_12"
                android:paddingHorizontal="@dimen/dp_14"
                android:layout_marginHorizontal="@dimen/dp_14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                android:background="@drawable/background_add_white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="@dimen/dp_10"
                    android:text="@string/activity_wifi_lock_help_13"
                    android:textColor="#333333"
                    android:textSize="13sp" />

                <TextView
                    android:lineSpacingExtra="5dp"
                    android:textSize="10sp"
                    android:textColor="#666666"
                    android:text="@string/activity_wifi_lock_help_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>


            <LinearLayout
                android:paddingBottom="@dimen/dp_12"
                android:paddingHorizontal="@dimen/dp_14"
                android:layout_marginHorizontal="@dimen/dp_14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                android:background="@drawable/background_add_white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="@dimen/dp_10"
                    android:text="@string/activity_wifi_lock_help_15"
                    android:textColor="#333333"
                    android:textSize="13sp" />

                <TextView
                    android:layout_marginBottom="@dimen/dp_12"
                    android:lineSpacingExtra="5dp"
                    android:textSize="10sp"
                    android:textColor="#666666"
                    android:text="@string/activity_wifi_lock_help_16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
