<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/tv_skip"
        android:layout_width="@dimen/dp_43"
        android:layout_height="@dimen/dp_20"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/dp_25"
        android:layout_marginRight="@dimen/dp_21"
        android:background="@drawable/retangle_15acf9_10"
        android:gravity="center"
        android:text="@string/skip"
        android:textColor="#3FC4FC"
        android:visibility="gone"
        android:textSize="@dimen/sp_12" />

    <ImageView
        android:id="@+id/iv_guide"
        android:layout_width="270pt"
        android:layout_height="227pt"
        app:srcCompat="@drawable/philips_guide_three"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="136pt"
        />

    <TextView
        android:id="@+id/tv_1"
        android:layout_above="@id/iv_guide"
        android:layout_marginBottom="81pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/philips_guide_page_three_hint"
        android:textColor="#0066A1"
        android:textSize="16pt" />

    <TextView
        android:layout_above="@id/tv_1"
        android:layout_marginBottom="12pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/philips_remote_control"
        android:textColor="#0066A1"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:textSize="30pt" />


    <Button
        android:id="@+id/btn"
        android:layout_width="120pt"
        android:layout_height="40pt"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40pt"
        android:layout_centerHorizontal="true"
        android:background="@drawable/philips_retangle_0066a1_3"
        android:text="@string/philips_immediate_experience"
        android:textColor="#FFFFFF"
        android:textSize="17pt" />

</RelativeLayout>